// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCard.jsx AddCard should render properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AddCard
    anyTouched={false}
    array={
      Object {
        "insert": [Function],
        "move": [Function],
        "pop": [Function],
        "push": [Function],
        "remove": [Function],
        "removeAll": [Function],
        "shift": [Function],
        "splice": [Function],
        "swap": [Function],
        "unshift": [Function],
      }
    }
    asyncValidate={[Function]}
    asyncValidating={false}
    autofill={[Function]}
    blur={[Function]}
    change={[Function]}
    clearAsyncError={[Function]}
    clearSubmit={[Function]}
    clearSubmitErrors={[Function]}
    destroy={[Function]}
    dirty={false}
    dispatch={[Function]}
    error={undefined}
    errorMessage=""
    form="addCard"
    handleAddNewCard={[Function]}
    handleSubmit={[Function]}
    initialValues={undefined}
    initialize={[Function]}
    initialized={false}
    invalid={false}
    pristine={true}
    pure={true}
    reset={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    submit={[Function]}
    submitFailed={false}
    submitSucceeded={false}
    submitting={false}
    touch={[Function]}
    triggerSubmit={undefined}
    untouch={[Function]}
    valid={true}
    warning={undefined}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "",
        <form
          onSubmit={undefined}
        >
          <div
            className="row"
          >
            <div
              className="column"
            >
              <label
                htmlFor="email"
              >
                Label
              </label>
              <Field
                className="form-control"
                component={[Function]}
                name="label"
                type="text"
              />
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="column"
            >
              <label
                htmlFor="password"
              >
                Content
              </label>
              <Field
                className="form-control"
                component={[Function]}
                name="content"
                type="textarea"
              />
            </div>
          </div>
          <button
            type="submit"
          >
            Save
          </button>
        </form>,
      ],
    },
    "ref": null,
    "rendered": Array [
      "",
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="row"
            >
              <div
                className="column"
              >
                <label
                  htmlFor="email"
                >
                  Label
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="label"
                  type="text"
                />
              </div>
            </div>,
            <div
              className="row"
            >
              <div
                className="column"
              >
                <label
                  htmlFor="password"
                >
                  Content
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="content"
                  type="textarea"
                />
              </div>
            </div>,
            <button
              type="submit"
            >
              Save
            </button>,
          ],
          "onSubmit": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="column"
              >
                <label
                  htmlFor="email"
                >
                  Label
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="label"
                  type="text"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="email"
                  >
                    Label
                  </label>,
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="label"
                    type="text"
                  />,
                ],
                "className": "column",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Label",
                    "htmlFor": "email",
                  },
                  "ref": null,
                  "rendered": "Label",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "class",
                  "props": Object {
                    "className": "form-control",
                    "component": [Function],
                    "name": "label",
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="column"
              >
                <label
                  htmlFor="password"
                >
                  Content
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="content"
                  type="textarea"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="password"
                  >
                    Content
                  </label>,
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="content"
                    type="textarea"
                  />,
                ],
                "className": "column",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Content",
                    "htmlFor": "password",
                  },
                  "ref": null,
                  "rendered": "Content",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "class",
                  "props": Object {
                    "className": "form-control",
                    "component": [Function],
                    "name": "content",
                    "type": "textarea",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Save",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Save",
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "",
          <form
            onSubmit={undefined}
          >
            <div
              className="row"
            >
              <div
                className="column"
              >
                <label
                  htmlFor="email"
                >
                  Label
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="label"
                  type="text"
                />
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="column"
              >
                <label
                  htmlFor="password"
                >
                  Content
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="content"
                  type="textarea"
                />
              </div>
            </div>
            <button
              type="submit"
            >
              Save
            </button>
          </form>,
        ],
      },
      "ref": null,
      "rendered": Array [
        "",
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="row"
              >
                <div
                  className="column"
                >
                  <label
                    htmlFor="email"
                  >
                    Label
                  </label>
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="label"
                    type="text"
                  />
                </div>
              </div>,
              <div
                className="row"
              >
                <div
                  className="column"
                >
                  <label
                    htmlFor="password"
                  >
                    Content
                  </label>
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="content"
                    type="textarea"
                  />
                </div>
              </div>,
              <button
                type="submit"
              >
                Save
              </button>,
            ],
            "onSubmit": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="column"
                >
                  <label
                    htmlFor="email"
                  >
                    Label
                  </label>
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="label"
                    type="text"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="email"
                    >
                      Label
                    </label>,
                    <Field
                      className="form-control"
                      component={[Function]}
                      name="label"
                      type="text"
                    />,
                  ],
                  "className": "column",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Label",
                      "htmlFor": "email",
                    },
                    "ref": null,
                    "rendered": "Label",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "class",
                    "props": Object {
                      "className": "form-control",
                      "component": [Function],
                      "name": "label",
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="column"
                >
                  <label
                    htmlFor="password"
                  >
                    Content
                  </label>
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="content"
                    type="textarea"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="password"
                    >
                      Content
                    </label>,
                    <Field
                      className="form-control"
                      component={[Function]}
                      name="content"
                      type="textarea"
                    />,
                  ],
                  "className": "column",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Content",
                      "htmlFor": "password",
                    },
                    "ref": null,
                    "rendered": "Content",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "class",
                    "props": Object {
                      "className": "form-control",
                      "component": [Function],
                      "name": "content",
                      "type": "textarea",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Save",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Save",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`AddCard.jsx AddCard should render with error properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AddCard
    anyTouched={false}
    array={
      Object {
        "insert": [Function],
        "move": [Function],
        "pop": [Function],
        "push": [Function],
        "remove": [Function],
        "removeAll": [Function],
        "shift": [Function],
        "splice": [Function],
        "swap": [Function],
        "unshift": [Function],
      }
    }
    asyncValidate={[Function]}
    asyncValidating={false}
    autofill={[Function]}
    blur={[Function]}
    change={[Function]}
    clearAsyncError={[Function]}
    clearSubmit={[Function]}
    clearSubmitErrors={[Function]}
    destroy={[Function]}
    dirty={false}
    dispatch={[Function]}
    error={undefined}
    errorMessage="Test: error message"
    form="addCard"
    handleAddNewCard={[Function]}
    handleSubmit={[Function]}
    initialValues={undefined}
    initialize={[Function]}
    initialized={false}
    invalid={false}
    pristine={true}
    pure={true}
    reset={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": Subscription {
          "listeners": Object {
            "clear": [Function],
            "get": [Function],
            "notify": [Function],
            "subscribe": [Function],
          },
          "onStateChange": [Function],
          "parentSub": undefined,
          "store": Object {
            "clearActions": [Function],
            "dispatch": [Function],
            "getActions": [Function],
            "getState": [Function],
            "replaceReducer": [Function],
            "subscribe": [Function],
          },
          "unsubscribe": [Function],
        },
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    submit={[Function]}
    submitFailed={false}
    submitSucceeded={false}
    submitting={false}
    touch={[Function]}
    triggerSubmit={undefined}
    untouch={[Function]}
    valid={true}
    warning={undefined}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <span>
            <strong>
              Error:
            </strong>
             
            Test: error message
             
          </span>
        </div>,
        <form
          onSubmit={undefined}
        >
          <div
            className="row"
          >
            <div
              className="column"
            >
              <label
                htmlFor="email"
              >
                Label
              </label>
              <Field
                className="form-control"
                component={[Function]}
                name="label"
                type="text"
              />
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="column"
            >
              <label
                htmlFor="password"
              >
                Content
              </label>
              <Field
                className="form-control"
                component={[Function]}
                name="content"
                type="textarea"
              />
            </div>
          </div>
          <button
            type="submit"
          >
            Save
          </button>
        </form>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": <span>
            <strong>
              Error:
            </strong>
             
            Test: error message
             
          </span>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <strong>
                Error:
              </strong>,
              " ",
              "Test: error message",
              " ",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Error:",
              },
              "ref": null,
              "rendered": "Error:",
              "type": "strong",
            },
            " ",
            "Test: error message",
            " ",
          ],
          "type": "span",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="row"
            >
              <div
                className="column"
              >
                <label
                  htmlFor="email"
                >
                  Label
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="label"
                  type="text"
                />
              </div>
            </div>,
            <div
              className="row"
            >
              <div
                className="column"
              >
                <label
                  htmlFor="password"
                >
                  Content
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="content"
                  type="textarea"
                />
              </div>
            </div>,
            <button
              type="submit"
            >
              Save
            </button>,
          ],
          "onSubmit": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="column"
              >
                <label
                  htmlFor="email"
                >
                  Label
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="label"
                  type="text"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="email"
                  >
                    Label
                  </label>,
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="label"
                    type="text"
                  />,
                ],
                "className": "column",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Label",
                    "htmlFor": "email",
                  },
                  "ref": null,
                  "rendered": "Label",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "class",
                  "props": Object {
                    "className": "form-control",
                    "component": [Function],
                    "name": "label",
                    "type": "text",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="column"
              >
                <label
                  htmlFor="password"
                >
                  Content
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="content"
                  type="textarea"
                />
              </div>,
              "className": "row",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <label
                    htmlFor="password"
                  >
                    Content
                  </label>,
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="content"
                    type="textarea"
                  />,
                ],
                "className": "column",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Content",
                    "htmlFor": "password",
                  },
                  "ref": null,
                  "rendered": "Content",
                  "type": "label",
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "class",
                  "props": Object {
                    "className": "form-control",
                    "component": [Function],
                    "name": "content",
                    "type": "textarea",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": "Save",
              "type": "submit",
            },
            "ref": null,
            "rendered": "Save",
            "type": "button",
          },
        ],
        "type": "form",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <span>
              <strong>
                Error:
              </strong>
               
              Test: error message
               
            </span>
          </div>,
          <form
            onSubmit={undefined}
          >
            <div
              className="row"
            >
              <div
                className="column"
              >
                <label
                  htmlFor="email"
                >
                  Label
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="label"
                  type="text"
                />
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="column"
              >
                <label
                  htmlFor="password"
                >
                  Content
                </label>
                <Field
                  className="form-control"
                  component={[Function]}
                  name="content"
                  type="textarea"
                />
              </div>
            </div>
            <button
              type="submit"
            >
              Save
            </button>
          </form>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": <span>
              <strong>
                Error:
              </strong>
               
              Test: error message
               
            </span>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <strong>
                  Error:
                </strong>,
                " ",
                "Test: error message",
                " ",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Error:",
                },
                "ref": null,
                "rendered": "Error:",
                "type": "strong",
              },
              " ",
              "Test: error message",
              " ",
            ],
            "type": "span",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="row"
              >
                <div
                  className="column"
                >
                  <label
                    htmlFor="email"
                  >
                    Label
                  </label>
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="label"
                    type="text"
                  />
                </div>
              </div>,
              <div
                className="row"
              >
                <div
                  className="column"
                >
                  <label
                    htmlFor="password"
                  >
                    Content
                  </label>
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="content"
                    type="textarea"
                  />
                </div>
              </div>,
              <button
                type="submit"
              >
                Save
              </button>,
            ],
            "onSubmit": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="column"
                >
                  <label
                    htmlFor="email"
                  >
                    Label
                  </label>
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="label"
                    type="text"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="email"
                    >
                      Label
                    </label>,
                    <Field
                      className="form-control"
                      component={[Function]}
                      name="label"
                      type="text"
                    />,
                  ],
                  "className": "column",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Label",
                      "htmlFor": "email",
                    },
                    "ref": null,
                    "rendered": "Label",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "class",
                    "props": Object {
                      "className": "form-control",
                      "component": [Function],
                      "name": "label",
                      "type": "text",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="column"
                >
                  <label
                    htmlFor="password"
                  >
                    Content
                  </label>
                  <Field
                    className="form-control"
                    component={[Function]}
                    name="content"
                    type="textarea"
                  />
                </div>,
                "className": "row",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <label
                      htmlFor="password"
                    >
                      Content
                    </label>,
                    <Field
                      className="form-control"
                      component={[Function]}
                      name="content"
                      type="textarea"
                    />,
                  ],
                  "className": "column",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Content",
                      "htmlFor": "password",
                    },
                    "ref": null,
                    "rendered": "Content",
                    "type": "label",
                  },
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "class",
                    "props": Object {
                      "className": "form-control",
                      "component": [Function],
                      "name": "content",
                      "type": "textarea",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Save",
                "type": "submit",
              },
              "ref": null,
              "rendered": "Save",
              "type": "button",
            },
          ],
          "type": "form",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
